--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 
-
-
 .powered-by-firepad {
   display: none;
 }
@@ -9,3 +7,32 @@
 	float: right;
 }
 
+/*Steph Work to Change Link Style-Overrides Default Bootstrap*/
+ul.nav li a, ul.nav li a:visited {
+    color: #888888;
+    font-size: 16px;
+}
+
+ul.nav li a:hover, ul.nav li a:active {
+    background-color: #f8f8f8;
+    border-style:solid;
+    border-width:5px;
+    border-left: none;
+    border-top: none;
+    border-right:none;
+    border-bottom-color: #0066ff;
+}
+
+ul.nav li.active a {
+    color: #888888;
+    font-size: 16px;
+}
+
+/*glyph style work*/
+.glyphicon{
+    padding-right: 4px;
+    font-size: 16px;
+    
+}
+
+/*END OF NAV LINK STYLE WORK*/
