looks like this is the first version of the gutter :) V 1.0

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,28 @@
 #runCode {
 	float: right;
 }
-.outer-gutter {
 
-    }
+.line_height {
+    white-space:nowrap;
+    color: blue;
+    font-family: "serif", Times ;
+    font-size:12px;
+    height: 14px; 
+    padding-left: 0px;
+    margin-left: 0px;
+    padding-right: 0px;
+    margin-right:0px;
+}
+    
+.highlight_gutter{
+    
+    color: black;
+    background-color: #eeeeee;
+}
+
+.iframeCss{
+    height: 700px; 
+    width: 100%;
+}
+    body { margin:0px; }
+
