--- a/include/executiontrace/David/Issue16.html
+++ b/include/executiontrace/David/Issue16.html
@@ -7,6 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 <!-- Init Scripts for Execution Trace API !-->
 <script src="../../esprima.js" type="text/javascript" charset="utf-8"></script>
+<script src="./scripts/escodegen.browser.js" type="text/javascript" charset="utf-8"></script>
 <script src="./scripts/esmorph.js" type="text/javascript" charset="utf-8"></script>
 <script src="./scripts/executiontrace.js" type="text/javascript" charset="utf-8"></script>
 <!-- End Scripts for Execution Trace API !-->
