Added documentation to main method traceRun

--- a/include/executiontrace/David/Issue16.html
+++ b/include/executiontrace/David/Issue16.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>ACE and Esprima in Action</title>
+<title>ACE and Esprima in Action!</title>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 <!-- Init Scripts for Execution Trace API !-->
