added new signature

--- a/include/executiontrace/David/Issue16.html
+++ b/include/executiontrace/David/Issue16.html
@@ -134,33 +134,32 @@ bubbleSort(data);
     
     // example of how to use the trace resulting data structure
     function visualize(stackTrace){
-        var i, entry, name, row, column, index;
+        var i, entry, name, index;
         var stackText= "";
     	var repeat = 0;
     	var previousCall = "";
     	var previousIndex = -1;
         for (i = 0; i < stackTrace.length; i += 1) {
             entry = stackTrace[i];
-            name = entry.name.split(':')[0];
-    		row = entry.data.lineNumber -1;
-    		column = entry.data.columnNumber;
-    		index = entry.index;
-    		 if(previousCall !== name){				 
-    			 if(repeat > 0){
-    				 stackText += previousIndex + " -- " + previousCall + "( + "+ repeat +" times) <br>";
-    				 repeat = 0;
-    			 }else{
-    				 if(previousIndex > -1){
-    					 stackText += previousIndex + " -- " + previousCall + "<br> ";
-    				 }
-    				 
-    			 }
-    			 previousCall = name;
-    			 previousIndex = index;
-    		 }else{
-    			 repeat = repeat + 1; 
-    		 }
-    		
+            if(entry){
+                name = entry.text.split(':')[0];
+        		index = entry.index;
+        		 if(previousCall !== name){				 
+        			 if(repeat > 0){
+        				 stackText += previousIndex + " -- " + previousCall + "( + "+ repeat +" times) <br>";
+        				 repeat = 0;
+        			 }else{
+        				 if(previousIndex > -1){
+        					 stackText += previousIndex + " -- " + previousCall + "<br> ";
+        				 }
+        				 
+        			 }
+        			 previousCall = name;
+        			 previousIndex = index;
+        		 }else{
+        			 repeat = repeat + 1; 
+        		 }
+            }
     		
         }
     	if(repeat > 0){
