--- a/include/executiontrace/David/Issue16.html
+++ b/include/executiontrace/David/Issue16.html
@@ -143,7 +143,7 @@ bubbleSort(data);
         for (i = 0; i < stackTrace.length; i += 1) {
             entry = stackTrace[i];
             if(entry){
-                name = entry.text.split(':')[0];
+                name = entry.text;
         		index = entry.index;
         		 if(previousCall !== name){				 
         			 if(repeat > 0){
