Added code for issue #17 analysis

--- a/include/executiontrace/David/Issue16.html
+++ b/include/executiontrace/David/Issue16.html
@@ -77,6 +77,11 @@ do{}while(c);
 for(i=0; i < 5; i++){}
 for( var x in c){}
 
+//issue 17
+
+var y =7, z = 49;
+var x = (y * 7) / z;
+
 </pre>
 <div id="info" >Ready.</div>
 <div id="stacktrace" >None</div>
