--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 
 
-
 .powered-by-firepad {
   display: none;
 }
@@ -11,26 +10,24 @@
 
 .line_height {
     white-space:nowrap;
-    color: blue;
-    font-family: "serif", Times ;
-    font-size:12px;
+    color: #C0C0C0;
+    font-size:11px;
     height: 14px; 
-    padding-left: 0px;
-    margin-left: 0px;
-    padding-right: 0px;
-    margin-right:0px;
+    
 }
     
 .highlight_gutter{
-    
     color: black;
-    background-color: #eeeeee;
+    background: #eeeeee;
+    display: table-row;
+
 }
 
 .iframeCss{
     height: 700px; 
     width: 100%;
     border-left: solid #eeeeee;
+    overflow:auto;
 }
     body { margin:0px; }
 
@@ -41,7 +38,7 @@
 @-moz-document url-prefix() {
    .line_height {
     white-space:nowrap;
-    color: blue;
+    color: #C0C0C0;
     font-family: "serif", Times ;
     font-size:12px;
     height: 16px; 
@@ -52,7 +49,7 @@
 }
 .highlight_gutter{
     
-    color: red;
+    color: black;
     background-color: #eeeeee;
 }
 
