--- a/include/executiontrace/Dana/Issue18.html
+++ b/include/executiontrace/Dana/Issue18.html
@@ -7,9 +7,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 <!-- Init Scripts for Execution Trace API !-->
 <script src="../../esprima.js" type="text/javascript" charset="utf-8"></script>
-<script src="./scripts/escodegen.browser.js" type="text/javascript" charset="utf-8"></script>
-<script src="./scripts/esmorph.js" type="text/javascript" charset="utf-8"></script>
-<script src="./scripts/executiontrace.js" type="text/javascript" charset="utf-8"></script>
+<script src="../David/scripts/escodegen.browser.js" type="text/javascript" charset="utf-8"></script>
+<script src="../David/scripts/esmorph.js" type="text/javascript" charset="utf-8"></script>
+<script src="../David/scripts/executiontrace.js" type="text/javascript" charset="utf-8"></script>
 <script src="./scripts/search.js" type="text/javascript" charset="utf-8"></script>
 <!-- End Scripts for Execution Trace API !-->
 
@@ -29,7 +29,7 @@
 		top: 20px;
 		left: 610px;
 		width: 200px;
-		z-index: 100;		
+		z-index: 101;		
 	}
 	#stacktrace{
 		position:absolute;
@@ -37,8 +37,8 @@
 		border-radius: 1px;
 		top: 40px;
 		left: 610px;
-		width: 600px;
-		bottom: 600px;
+		width: auto;
+		bottom: auto;
 		z-index: 100;		
 	}
 </style>
@@ -46,27 +46,15 @@
 <body>
 
 <pre id="editor">
-Array.prototype.swap = function (i, j) {
-    var k = this[i]; this[i] = this[j]; this[j] = k;
-}
+//issue 18 sample cases
+var div = document.getElementById("DOMEelement");// a variable being source of a DOM element
 
-function bubbleSort(list) {
-    var items = list.slice(0), swapped = false, p, q;
-    for (p = 1; p < items.length; ++p) {
-        for (q = 0; q < items.length - p; ++q) {
-            if (items[q + 1] < items[q]) {
-                items.swap(q, q + 1);
-                swapped =true;
-            }
-        }
-        if (!swapped) break;
-    }
-    return items;
-}
+//div.appendChild(document.createTextNode("blah")); // a sink for DOM element
 
-var N = 5, data = []; while (N > 0) data.push(N--);
-bubbleSort(data);
+//$("#DOMEelement").html( document.createTextNode("blah")); // a sink for DOM edition JQuery
+//$("#DOMEelement").append(" more blah"); // a sink for DOM edition JQuery
 
+//  We should track these kinds of calls in our trace data and show to the developer 
 </pre>
 <div id="info" >Ready.</div>
 <div id="stacktrace" >None</div>
@@ -76,14 +64,19 @@ bubbleSort(data);
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/javascript");
 	editor.renderer.setShowGutter(true);
+	editor.session.setOption("useWorker", false);
     
     //Esprima
     // done: prepare demo from http://esprima.org/demo/functiontrace.html into this one 
     // done: look the required statements in the tree
     // todo: instrument the log of issue 16 [pending to catch the expression statement parent so code can be appended]
     // todo: collect the stack trace [ populate tree with callstack sequences]
+    var canTrace = true;
+    var traceAnnotations =[];
     window.onload = function () {
         'use strict';
+        canTrace=true;
+        window.CANTRACE =true;
     	
         document.getElementById('info').setAttribute('class', 'alert-box secondary');
         document.getElementById('info').innerHTML = 'Ready.';
@@ -94,12 +87,22 @@ bubbleSort(data);
     	    visualize(executionTrace.stackTrace);
     	}
     	
+    	setTimeout(function(){  canTrace = true;}, 3000);
+    	
     	var aceDocumentForEsprima = editor.getSession().getDocument(); // get the document for changes in its structure
     	aceDocumentForEsprima.on("change", function(e){
     	    var sourceCode = aceDocumentForEsprima.getValue(); // get the code to analyze
     	    // API CALL
-    		window.traceExecution(sourceCode, eventListener);
+    	    if(canTrace){
+    	    	window.traceExecution(sourceCode, eventListener);
+    	        canTrace = false;
+    	        setTimeout(function(){  canTrace = true;}, 3000);
+    	    }
+    	     showTraceAnnotations(editor);
     	});
+    // 	editor.getSession().on("changeAnnotation", function(e){
+    //         showTraceAnnotations(editor);
+    // 	});
     
     };
     
@@ -110,7 +113,9 @@ bubbleSort(data);
             document.getElementById('info').innerHTML = event.description;
     		document.getElementById('stacktrace').innerHTML = 'Waiting...';        
         }else if(event.status === "Finished"){
+            traceAnnotations = window.getTraceAnnotations();
             showTraceAnnotations(editor);
+            
             document.getElementById('info').setAttribute('class', 'alert-box secondary');
             document.getElementById('info').innerHTML = event.description;
             var stackTrace = window.TRACE.getStackTrace();
@@ -118,19 +123,29 @@ bubbleSort(data);
             var executionTrace = {'stackTrace' : stackTrace, 'valueTable' : valueTable};
             
             localStorage.setItem('executionTrace', JSON.stringify(executionTrace));
-    		document.getElementById('stacktrace').innerHTML ='CALL STACK:<br>'+ visualize(stackTrace)+'<br>EXECUTION TRACE:<br>'+visualize(valueTable); 
+    		document.getElementById('stacktrace').innerHTML ='LOCAL CALL STACK:<br>'+ visualize(stackTrace)+'<br>EXECUTION TRACE:<br>';
+    		
+    	 $('#stacktrace').append(visualizeExecutionTrace(valueTable)); 
+    	 
         }else if(event.status === "Error"){
             document.getElementById('info').innerHTML = event.description;
             document.getElementById('info').setAttribute('class', 'alert-box alert');
             document.getElementById('stacktrace').innerHTML = 'Waiting...';
+        }else if(event.status === "Timeout"){
+            document.getElementById('info').innerHTML = event.description;
+            document.getElementById('info').setAttribute('class', 'alert-box alert');
+            document.getElementById('stacktrace').innerHTML = 'Waiting...';
+        }else if(event.status === "Busy"){
+            document.getElementById('info').innerHTML = event.description;
+            document.getElementById('info').setAttribute('class', 'alert-box alert');
+            document.getElementById('stacktrace').innerHTML = 'Busy, please wait...';
         }
     }
     
     // example using ACE Annotations
     function showTraceAnnotations(aceEditor) {
             var annotations = aceEditor.getSession().getAnnotations();	
-            var traceAnnotations = window.getTraceAnnotations();
-            annotations.concat(traceAnnotations);
+            annotations= annotations.concat(traceAnnotations);
     		aceEditor.getSession().setAnnotations(annotations);
     }
     
@@ -172,6 +187,22 @@ bubbleSort(data);
     			stackText += previousIndex + " -- " + previousCall ;
     		}					 
     	}
+    	
+    	return stackText;  
+    
+    }
+     // example of how to use the trace resulting data structure
+    function visualizeExecutionTrace(executionTrace){
+        
+        var i, entry;
+        var stackText= "";
+
+        for (i = 0; i < executionTrace.length; i += 1) {
+            entry = executionTrace[i];
+            stackText += i + " -- " + JSON.stringify(entry) + "<br> ";
+           
+        }
+       
     	
     	return stackText;  
     
