--- a/include/executiontrace/Dana/Issue18.html
+++ b/include/executiontrace/Dana/Issue18.html
@@ -10,9 +10,11 @@
 <script src="../David/scripts/escodegen.browser.js" type="text/javascript" charset="utf-8"></script>
 <script src="../David/scripts/esmorph.js" type="text/javascript" charset="utf-8"></script>
 <script src="../David/scripts/executiontrace.js" type="text/javascript" charset="utf-8"></script>
-<script src="./scripts/search.js" type="text/javascript" charset="utf-8"></script>
 <!-- End Scripts for Execution Trace API !-->
-
+<!-- Init Scripts for issue 18 !-->
+<script type="text/javascript" src="./scripts/JSLINQ.js"></script>
+<script src="./scripts/search.js" type="text/javascript" charset="utf-8"></script>
+<!-- End Scripts for for issue 18  !-->
 <style type="text/css" media="screen">
     #editor { 
         position: absolute;
