--- a/include/executiontrace/Han/AceRangeTest.html
+++ b/include/executiontrace/Han/AceRangeTest.html
@@ -31,15 +31,25 @@
 	<body>
         <h3>Simple Range Value Function Testing (getValues(Range))</h3>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        <div id = "status">
-            Row values on hover-over: <br/>
-        </div>
         <div id = "cursorPos">
-            Cursor Position: <br/>
+            Cursor Position: (x,y) 
         </div>
+        <br/>
+        <div id = "rowValues">
+            Row values on hover-over (without type of statement): 
+        </div>
+        <br/>
         <div id = "valueOfCurPos">
-            Cursor Position: <br/>
-        </div>        
+            Value of a Cursor Position (without type of statement): [] 
+        </div>
+        <br/>
+        <div id = "valueOfCurPosWType">
+            Value of a Cursor Position (with type of statement): [] 
+        </div>
+        <br/><br/>
+        <div id = "fullTrace">
+            Full Trace: {...}<br/>
+        </div>
         <table border=1>
             <tr>
                 <td></td>
@@ -57,15 +67,24 @@
                 <td id = "ec"></td>
             </tr>
         </table><br/><br/>
-        
-<div id="editor">var x = 5;var y = 10;
-var z = [1,2,3]; <!-- the position of the code here matches the editor, so no indentation :) -->
+        <!-- the position of the code here matches the editor, so no indentation :) -->
+<div id="editor">var x = 5;var y = 10; // demonstrate two values on the same line
+var z = [1,2,3]; // demonstrate retrieving all values inside the array
+//function foo(){
+    var result = 5;
+    while(result>0){
+        result--;
+    }
+//    return result;
+//}
 </div>
     	<script>
     	    // label to display the current result
-    		$("#status").css("font-size","20px");
+    		$("#rowValues").css("font-size","20px");
     		$("#cursorPos").css("font-size","20px");
     		$("#valueOfCurPos").css("font-size","20px");
+    		$("#valueOfCurPosWType").css("font-size","20px");
+    		$("#fullTrace").css("font-size","20px");
     		// Initiating the editor
     	    var editor = ace.edit("editor");
     	    editor.setTheme("ace/theme/monokai");
@@ -74,7 +93,7 @@ var z = [1,2,3]; <!-- the position of the code here matches the editor, so no in
             //  Function is triggered on changing mouse position. mousemove is an ACE method specific for ACE editor  //
             editor.on("mousemove",function(e){
                 var acePos = e.getDocumentPosition();
-                var valuesOfCurrentLine, valueOfCurrentPosition;
+                var valuesOfCurrentLine, valueOfCurrentPosition, valueOfCurrentPositionWType, fullTrace;
                 //"range":{"start":{"row":18,"column":8},"end":{"row":18,"column":9}}
                 var concatRange = { "start":{"row":acePos.row,
                                     "column":acePos.column},
@@ -91,11 +110,15 @@ var z = [1,2,3]; <!-- the position of the code here matches the editor, so no in
             	if(eti.linkEstablished){           
             		valuesOfCurrentLine = eti.getLineValues(acePos.row+1);
             		valueOfCurrentPosition = eti.getValues(concatRange);
+            		valueOfCurrentPositionWType = eti.getValuesWithType(concatRange);
+            		fullTrace = eti.getFullTrace();
             	}
             	//  Updates the div to show the values of mouse hovered elements  
-            	$("#status").text("Values On Hover-over: "+JSON.stringify(valuesOfCurrentLine));
+            	$("#rowValues").text("Row Values On Hover-over (without type of statement): "+JSON.stringify(valuesOfCurrentLine));
+            	$("#valueOfCurPosWType").text("Value Of Cur Pos (with type of statement): "+JSON.stringify(valueOfCurrentPositionWType));
             	$("#cursorPos").text("Cursor Position: (X:" + (acePos.row+1) + ",Y:" + (acePos.column+1) + ")");
-            	$("#valueOfCurPos").text("Value Of Cur Pos: "+JSON.stringify(valueOfCurrentPosition));
+            	$("#valueOfCurPos").text("Value Of Cur Pos (without type of statement): "+JSON.stringify(valueOfCurrentPosition));
+            	$("#fullTrace").text("Full Trace: "+fullTrace);
             });
     	</script>
 	</body>
