corrected Dana's last name

--- a/include/executiontrace/Han/AceRangeTest.html
+++ b/include/executiontrace/Han/AceRangeTest.html
@@ -2,7 +2,7 @@
 <!-- (@author: Han Tsung Liu-->
 <!--  @started: 02-24-16-->
 <!--  @last-modified: 02-26-16)-->
-<!--  Reviewed by: Dana Pepporuby and Venkat Polumahanti (02-26-16)-->
+<!--  Reviewed by: Dana Turner and Venkat Polumahanti (02-26-16)-->
 <!--  Sample Implementation of ExecutionTraceInterface.js
 <!--  1) Creating an instance of the ExecutionTraceInterface class- ->
 <!--  2) Calling getLineValues(lineNumber) function to retrieve all values for the row in editor-->
