--- a/include/executiontrace/Han/AceRangeTest.html
+++ b/include/executiontrace/Han/AceRangeTest.html
@@ -16,7 +16,7 @@
 	    <!-- End Scripts for Execution Trace API !-->
 	    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
-		<script src="ExecutionTraceInterface.js"></script>
+		<script src="../Han/ExecutionTraceInterface.js"></script>
 	    <style>
 	    #editor { 
 	        position: absolute;
@@ -72,9 +72,7 @@
             </tr>
         </table><br/><br/>
         
-<div id="editor">var x = 2;
-while(x>0){
-    x--;
+
         <!-- the position of the code here matches the editor, so no indentation :) -->
 <div id="editor">// Assignment Statement
 var a = true; // {"AssignmentExpression":"true"}
