work on the vis viewer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,3 +181,15 @@ div.au-stagger {
     opacity: 1;
   }
 }
+
+htmlViewer {
+  width: 100%;
+}
+
+visViewer {
+  width: 100%;
+}
+
+iframe {
+  width: 100%;
+}
