--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-
+body { padding-top: 39px; }
 .powered-by-firepad {
   display: none;
 }
@@ -55,5 +55,32 @@
  width: 100%; 
  border: none;
  overflow:overflow;
+}
+
+
+
+ul.nav li a, ul.nav li a:visited {
+    color: #888888;
+    font-size: 16px;
+}
+
+ul.nav li a:hover, ul.nav li a:active {
+    background-color: #eeeeee;
+    border-left: none;
+    border-top: none;
+    border-right:none;
+    font-size: 16px;
+}
+
+ul.nav li.active a {
+    color: #888888;
+    font-size: 16px;
+}
+
+/*glyph style work*/
+.glyphicon{
+    padding-right: 4px;
+    font-size: 16px;
+    
 }
 
