--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,52 @@
 
-body { padding-top: 70px; }
+
+body{
+    padding-top: 40px; 
+    min-height: 100%;
+    margin: 0;
+}
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+    body{
+    padding-top: 40px; 
+    min-height: 100%;
+    margin: 0;
+}
+div.fullWidth {
+  width: 100%;
+}
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+    body{
+    padding-top: 50px; 
+    min-height: 100%;
+    margin: 0;
+}
+
+div.fullWidth {
+  width: 100%;
+}
+
+}
+.ace_scrollbar {
+    display: none !important;
+}
+.hidden-thing {
+  position: absolute;
+  left: 100%;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+}
+
 .powered-by-firepad {
   display: none;
 }
