--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,3 +198,11 @@ td, th {
     padding: 1px 4px;
     border: 1px black solid;
 }
+
+#visualizations {
+  padding-top: 5px;
+}
+
+#vis-navbar {
+  padding-bottom: 5px;
+}
