--- a/src/layout/nav-bar.html
+++ b/src/layout/nav-bar.html
@@ -1,30 +1,62 @@
 <template bindable="router">
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse">
-        <span class="sr-only">Toggle Navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-        <i class="fa fa-home"></i>
-        <span>${router.title}</span>
-      </a>
-    </div>
+  
+  <nav class="navbar navbar-default">
+	  			<div class="container-fluid">
+	  				
+	  		
+	  				<ul class = "nav pull-left">
+	  					<li>
+	  						<img src="src\layout\SeeCodeRunTitle.png" alt="See Code Run">
+	  					</li>
+	  				</ul>
+	  			
+	  			<!--Chat-->
+		  			<ul class = "nav pull-right">
+		  				<li>
+		  				<a href="#popup" id="hide"><span class='glyphicon glyphicon-share'></span>Chat</a>
+		  				</li>
+		  			</ul>
+	  				
+	  				
+	  				<!-- Help-->
+		  			<ul class = "nav pull-right">
+		  				<li>
+		  					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/SeeCode.Run-Help!"><span class='glyphicon glyphicon-question-sign'></span>Help</a>
+		  				</li>
+		  			</ul>
+	  			
+	  				<!-- Contact Us-->
+		  			<ul class = "nav pull-right">
+		  				<li>
+		  					<a href="mailto:contact@seecode.run"><span class='glyphicon glyphicon-envelope'></span>Contact Us</a>
+		  				</li>
+		  			</ul>
+	  			
+	  				<!-- About-->
+		  			<ul class = "nav pull-right">
+		  				<li>
+		  					<a href="https://github.com/tlatoza/SeeCodeRun/wiki/About-SeeCode.Run"><span class='glyphicon glyphicon-info-sign'></span>About</a>
+		  				</li>
+		  			</ul>
+	  				
+	  			</div>
+	
+	  		</nav>
+  
+  <!--<div id="popup" class="seecoderun-chat l-demo-container">
+  <div class="seecoderun-chatHeader" <header>SeeCode.Run Chat</header></div> <!-- added div and class--> 
 
-    <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-          <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title}</a>
-        </li>
-      </ul>
+<!--  <div class='seecoderun-chat-toolbar'>-->
+<!--    <label for="nameInput">Username:</label>-->
+<!--    <input type='text' id='nameInput' placeholder='Enter Your Username...'>-->
+<!--  </div>-->
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="loader" if.bind="router.isNavigating">
-          <i class="fa fa-spinner fa-spin fa-2x"></i>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<!--  <ul id='seecoderun-messages' class="seecoderun-chat-messages"></ul>-->
+
+<!--  <footer>-->
+<!--    <input type='text' id='messageInput'  placeholder='Type Message Here...'>-->
+<!--  </footer>-->
+<!--</div>-->
+<!--  </div>-->
+  
 </template>
