--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,34 @@ body {
   margin: 0;
 }
 
+/*Steph Work to Change Link Style-Overrides Default Bootstrap*/
+ul.nav li a, ul.nav li a:visited {
+    color: #888888;
+    font-size: 16px;
+}
+
+ul.nav li a:hover, ul.nav li a:active {
+    background-color: #f8f8f8;
+    border-style:solid;
+    border-width:5px;
+    border-left: none;
+    border-top: none;
+    border-right:none;
+    border-bottom-color: #0066ff;
+}
+
+ul.nav li.active a {
+    color: #888888;
+    font-size: 16px;
+}
+
+/*glyph style work*/
+.glyphicon{
+    padding-right: 4px;
+    font-size: 16px;
+    
+}
+
 .splash {
   text-align: center;
   margin: 10% 0 0 0;
